# todos-fastapi-hexa

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
src/: main.py
src/api/: auth.py  tasks.py
src/auth/: security.py
src/models/: memory_store.py  user_store.py
src/schemas/: task.py  user.py
tests/: test_api_auth.py  test_api_tasks.py  test_auth_security.py  test_auth_tasks.py  test_main.py  test_memory_store.py  test_schemas.py  test_user_store.py
