[project]
name = "todos-fastapi"
version = "0.1.0"
description = "API de gestion de tâches avec architecture hexagonale"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.7",
]
